app/static/sass/layout/_header.scss
/*

Header
------

The global page header

*/

.page-header {
    @extend .group;
    @extend .title;
    padding: $line/2 $line;
    position: relative;
    z-index: 10;
}

.header-logo {
    display: block;
    float: left;
    white-space: nowrap;
    &__mark, &__type {
        display: inline-block;
        vertical-align: baseline;
        margin: 0;
    }
    &__mark {
        max-height: 40px;
        position: relative;
        top: 1px;
    }
    &__type {
        margin-left: 3px;
        font-size: $text;
        line-height: $line;
        font-weight: 700;
        color: $gray-mid;
    }
    &:hover &__type {
        color: $primary;
    }
}



@media #{$max-m} {
    .page-header {
        z-index: 200;
    }
    .header-logo {
        &__mark, &__type {
            vertical-align: middle;
        }
    }
    .page-nav {
        clear: both;
        &__toggle {
            $icon-width: 17px;

            display: block;
            padding: $line - $icon-width + $line*3/4;
            position: absolute;
            top: 0;
            right: 0;
            background: transparent;
            border: none;
            transition: all 0.2s ease-out;
            img {
                display: block;
                width: $icon-width;
            }
            .no-js & {
                display: none;
            }
            &.is-active {
                position: fixed;
                z-index: 30;
                transform: rotate(135deg);
            }
        }
        &__user {
            color: $bg;
            margin-bottom: $line/2;
        }
        &__item {
            font-family: $font-stack-body;
            display: block;
            color: $gray-light;
            font-size: $kilo;
            font-style: italic;
            color: $accent;
            &:nth-child(2) {
                color: mix($primary-light, $accent, 30%);
            }
            &:nth-child(3) {
                color: mix($primary-light, $accent, 70%);
            }
            &:nth-child(n+4) {
                color: $primary-light;
            }
        }
        .js & {
            position: fixed;
            top: 0;
            right: 0;
            bottom: 0;
            left: 0;
            padding: $line*2;
            text-align: center;
            background: $gray-dark url('../images/bg-polygons.svg') no-repeat 0 0;
            display: flex;
            flex-direction: column;
            align-content: stretch;
            justify-content: center;
            box-shadow: inset 0 0 0 $line/2 - 1px $gray-dark, inset 0 0 0 $line/2 darken($primary, 10%);
            z-index: -1;
            opacity: 0;
            visibility: hidden;
            transition: all 0.2s ease-out;
            &.is-active {
                opacity: 1;
                z-index: 20;
                visibility: visible;
            }
            &__item {
                padding: $line/2;
            }
        }
    }
}


@media #{$min-m} {
    .page-nav__toggle, .page-nav__item--small {
        display: none !important;
    }

    .page-header {
        padding: $line $line*2 0;
        &--home {
            padding: $line*4 $line*2 0;
        }
    }

    .header-logo {
        &__mark {
            max-height: 60px;
            margin-right: 4px;
        }
        &__type {
            font-size: $kilo;
            .page-header--home &, .page-header--home .header-logo:hover & {
                color: #fff;
                text-shadow: 0 1px 2px rgba(0,0,0,0.3);
            }
        }
    }

    .page-nav {
        text-align: right;
        margin-right: -$line;
        position: relative;
        &:before {
            content: '';
            display: inline-block;
            vertical-align: baseline;
            height: 60px;
        }
        &__user {
            display: block;
            position: absolute;
            right: $line/2;
            top: 0;
            font-size: $milli;
        }
        &__item {
            display: inline-block;
            vertical-align: baseline;
            padding: $line;
            font-size: $kilo - 1px;
            color: $gray-light;
            opacity: 0.8;
            span {
                transition: all 0.2s ease-out;
            }
            &:hover {
                color: $primary;
                opacity: 1;
                span {
                    box-shadow: 0 2px 0 $bg, 0 6px 0 $primary;
                }
            }
            .page-header--home & {
                color: #fff;
                text-shadow: 0 1px 2px rgba(0,0,0,0.3);
                span {
                    box-shadow: 0 4px 0 rgba(255,255,255,0.3);
                }
                &:hover span {
                    box-shadow: 0 4px 0 #fff;
                }
            }
        }
        .page-header--admin & {
            margin-right: -$line/2;
            &__item {
                padding: $line $line/2;
            }
        }
    }
}


@media #{$min-l} {
    .page-header {
        padding: $line*3 $line*2 $line/2;
        &--home {
            padding-top: $line*4;
            padding-bottom: 0;
        }
        &--article {
            margin-left: 35%;
            .page-bound {
                margin: 0;
            }
        }
    }
}


@media #{$min-w} {
    .page-header {
        &--home {
            padding-top: $line*7;
        }
    }
}

